iptables/iptables.docker-firewall.rules
*filter

# From https://serverfault.com/questions/704643/steps-for-limiting-outside-connections-to-docker-container-with-iptables

:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]

-A DOCKER-ISOLATION -j RETURN

-A DOCKER-USER -p tcp -s 192.168.118.0/23 --dport 443 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.238.0/23 --dport 443 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.113.192/255.255.255.240 --dport 443 -j ACCEPT
-A DOCKER-USER -p tcp --dport 443 -j DROP

-A DOCKER-USER -p tcp -s 192.168.118.0/23 --dport 80 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.238.0/23 --dport 80 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.113.192/255.255.255.240 --dport 80 -j ACCEPT
-A DOCKER-USER -p tcp --dport 80 -j DROP

-A DOCKER-USER -p tcp -s 192.168.118.0/23 --dport 8089 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.238.0/23 --dport 8089 -j ACCEPT
-A DOCKER-USER -p tcp -s 192.168.113.192/255.255.255.240 --dport 8089 -j ACCEPT
-A DOCKER-USER -p tcp --dport 8089 -j DROP

-A DOCKER-USER -j RETURN

COMMIT
